# rust-todo-app-with-grpc-and-warp

./: .gitignore  Cargo.toml  Makefile.toml
grpc-todo/: Cargo.toml  build.rs
grpc-todo/migrations/: 20250402141021_create_table.sql
grpc-todo/src/: config.rs  db.rs  main.rs  server.rs
htmx-warp/: Cargo.toml  build.rs
htmx-warp/src/: index.html  main.rs
proto/: todo.proto
